[package]
name = "BlackToaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
image = { version = "0.24.6", features = ["webp-encoder", "avif-decoder"] }
libp2p = { version = "0.52.1", features = ["tokio", "gossipsub", "ed25519", "mdns"] }
scylla = "0.8.2"
serde = { version = "1.0.166", features = ["derive"] }
toml = "0.7.5"
